objects/Reports_Junction__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component ID</label>
        <referenceTo>Metadata_Component__c</referenceTo>
        <relationshipLabel>Reports Junction</relationshipLabel>
        <relationshipName>Reports_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation ID</label>
        <referenceTo>AR_Dashboard__c</referenceTo>
        <relationshipLabel>Reports Junction</relationshipLabel>
        <relationshipName>Reports_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reports Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Reports</fullName>
        <columns>NAME</columns>
        <columns>Component_ID__c</columns>
        <columns>Operation_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reports Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>